Fixed DrawCards and partially fixed loadCardPool and other fixed bugs