@@ -19,7 +19,7 @@ public class Game implements GameManager {
     private int currentPlayerIndex;
     private int turn;
 
-    public Game(String playerName) throws IOException {
+    public Game(String name) throws IOException {
 
 
         //Created a new board with Game as game manager and randomised colours
@@ -32,7 +32,7 @@ public class Game implements GameManager {
         Deck.loadCardPool(board, this);
 
         //Created the Players
-        Player humanPlayer = new Player(playerName, colours.getFirst());
+        Player humanPlayer = new Player(name, colours.get(0));
         CPU cpu1 = new CPU("CPU 1", colours.get(1), board);
         CPU cpu2 = new CPU("CPU 2", colours.get(2), board);
         CPU cpu3 = new CPU("CPU 3", colours.get(3), board);
