@@ -14,8 +14,8 @@ import java.util.Arrays;
 import java.util.Collections;
 
 public class Deck {
-   static final String CARDS_FILE= "G:\\Jackaroo\\Jackaroo\\Cards.csv";
-   static ArrayList<Card> cardsPool;
+   private static final String CARDS_FILE= "G:\\Jackaroo\\Jackaroo\\Cards.csv";
+   private static ArrayList<Card> cardsPool;
 
 public static void loadCardPool(BoardManager boardManager, GameManager gameManager) throws IOException {
     BufferedReader reader = new BufferedReader(new FileReader(CARDS_FILE));
@@ -34,68 +34,36 @@ public static void loadCardPool(BoardManager boardManager, GameManager gameManag
             frequency = Integer.parseInt(currentCard.get(1));
             name = currentCard.get(2);
             description = currentCard.get(3);
-            rank = Integer.parseInt(currentCard.get(4));
-            suit = Suit.valueOf(currentCard.get(5));
+            rank = 0;
+            suit = null;
+            if(currentCard.size() > 4) {
+                rank = Integer.parseInt(currentCard.get(4));
+                suit = Suit.valueOf(currentCard.get(5));
+            }
+
 
 
             // decide on which constructor
-            switch (code) {
-                case 1 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Ace(name, description, suit, boardManager, gameManager));
-                    }
-                }
-                case 4 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Four(name, description, suit, boardManager, gameManager));
-                    }
-                }
-                case 5 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Five(name, description, suit, boardManager, gameManager));
-                    }
-                }
-                case 7 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Seven(name, description, suit, boardManager, gameManager));
-                    }
-                }
-                case 10 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Ten(name, description, suit, boardManager, gameManager));
-                    }
-                }
-                case 11 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Jack(name, description, suit, boardManager, gameManager));
-                    }
-                }
-                case 12 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Queen(name, description, suit, boardManager, gameManager));
-                    }
-                }
-                case 13 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new King(name, description, suit, boardManager, gameManager));
-                    }
-                }
-                case 14 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Burner(name, description, boardManager, gameManager));
-                    }
-                }
-                case 15 -> {
-                    for (int i = 0; i < frequency; i++) {
-                        cardsPool.add(new Saver(name, description, boardManager, gameManager));
-                    }
+            for (int i = 0; i < frequency; i++) {
+                switch (code) {
+                    case 0 -> cardsPool.add(new Standard(name, description, rank, suit, boardManager, gameManager));
+                    case 1 -> cardsPool.add(new Ace(name, description, suit, boardManager, gameManager));
+                    case 4 -> cardsPool.add(new Four(name, description, suit, boardManager, gameManager));
+                    case 5 -> cardsPool.add(new Five(name, description, suit, boardManager, gameManager));
+                    case 7 -> cardsPool.add(new Seven(name, description, suit, boardManager, gameManager));
+                    case 10 -> cardsPool.add(new Ten(name, description, suit, boardManager, gameManager));
+                    case 11 -> cardsPool.add(new Jack(name, description, suit, boardManager, gameManager));
+                    case 12 -> cardsPool.add(new Queen(name, description, suit, boardManager, gameManager));
+                    case 13 -> cardsPool.add(new King(name, description, suit, boardManager, gameManager));
+                    case 14 -> cardsPool.add(new Burner(name, description, boardManager, gameManager));
+                    case 15 -> cardsPool.add(new Saver(name, description, boardManager, gameManager));
                 }
             }
         } catch (Exception e) {
             System.out.println("Could not parse card");
         }
-        reader.close();
     }
+    reader.close();
 }
 
     public static ArrayList<Card> drawCards() {
@@ -103,7 +71,7 @@ public static void loadCardPool(BoardManager boardManager, GameManager gameManag
     ArrayList<Card> cards = new ArrayList<>();
     // Assuming that if cardsPool is less than 4, it wants the current cards still
     for(int i = 0; i < 4 && !cardsPool.isEmpty(); i++) {
-        cards.add(cardsPool.removeFirst());
+        cards.add(cardsPool.remove(0));
     }
     return cards;
     }
